added trading with multiple FIGIes